--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,21 +1,21 @@
 footer.footer
   .footer-links
 
-    button.michael 
-      a(href='https://www.linkedin.com/in/michael-gann-1a2161201/') 
-        img(src='https://img.flaticon.com/icons/png/512/174/174857.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF' width='40px' height='30') 
+    div.michael
+      a(href='https://www.linkedin.com/in/michael-gann-1a2161201/')
+        i(class="fab fa-linkedin")
       span Michael Gann
-      a(href='https://github.com/michael-gann') 
-        img(src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png' width='30px')
-    button.zac 
-      a(href='https://www.linkedin.com/in/zac-watts-b27450106/') 
-          img(src='https://img.flaticon.com/icons/png/512/174/174857.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF' width='40px' height='30')
+      a(href='https://github.com/michael-gann')
+        i(class="fab fa-github")
+    div.zac
+      a(href='https://www.linkedin.com/in/zac-watts-b27450106/')
+        i(class="fab fa-linkedin")
       span Zac Watts
       a(href='https://github.com/zdwatts')
-        img(src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png' width='30px')
-    button.david 
-      a(href='https://www.linkedin.com/in/david-griffin-117b0045/') 
-          img(src='https://img.flaticon.com/icons/png/512/174/174857.png?size=1200x630f&pad=10,10,10,10&ext=png&bg=FFFFFFFF' width='40px' height='30')
+        i(class="fab fa-github")
+    div.david
+      a(href='https://www.linkedin.com/in/david-griffin-117b0045/')
+        i(class="fab fa-linkedin")
       span David Griffin
       a(href='https://github.com/davidleegriffin')
-        img(src='https://github.githubassets.com/images/modules/logos_page/GitHub-Mark.png' width='30px')
+        i(class="fab fa-github")
