--- a/views/layout.pug
+++ b/views/layout.pug
@@ -7,6 +7,7 @@ html
         link(rel='stylesheet' href='/stylesheets/navbar.css')
         link(rel='stylesheet' href='/stylesheets/universal.css')
         link(rel='stylesheet' href='/stylesheets/footer.css')
+        script(src="https://kit.fontawesome.com/8c842e2f44.js" crossorigin="anonymous")
   body
     nav(class="mainnav")
       div(class="navbar")
