--- a/public/stylesheets/books.css
+++ b/public/stylesheets/books.css
@@ -36,10 +36,16 @@
 	flex-wrap: wrap;
 }
 
+.page-wrapper {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
 .book {
 	display: flex;
 	flex-direction: column;
-	margin-left: 250px;
+	/* margin-left: 250px; */
 	height: fit-content;
 	width: fit-content;
 	justify-content: center;
@@ -49,9 +55,9 @@
 	border-radius: 5px;
 	margin-top: 25px;
 	/* box-shadow: 0 0 20px 5px rgba(0, 0, 0, 0.1); */
-	margin-bottom: 400px;
+	margin-bottom: 150px;
 	z-index: -40;
-	margin-right: 180px;
+	/* margin-right: 180px; */
 }
 
 .review-container {
