--- a/views/review-page.pug
+++ b/views/review-page.pug
@@ -5,7 +5,7 @@ append head
 
 block content
 
-  .new-container
+  .page-container
     .reviews-container
       p.reviews-title Recent Reviews
       div.nested-reviews-container
