add adam to footer

--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,6 +1,12 @@
 footer.footer
   .footer-links
 
+    div.adam
+      a(href='https://www.linkedin.com/in/damien-darko/')
+        i(class="fab fa-linkedin")
+      span Damien Darko
+      a(href='https://github.com/djangothesolarboy')
+        i(class="fab fa-github")
     div.michael
       a(href='https://www.linkedin.com/in/michael-gann-1a2161201/')
         i(class="fab fa-linkedin")
