--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ block content
 
   div.main-container
 
-    h2.welcome Welcome to deadreads!
+    h2.welcome Welcome to Deadreads!
 
     div.page-wrapper
       div.books-container
