--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -12,9 +12,9 @@
 .form-container {
     margin-top: 3%;
     background-color: white;
-    height: 50%;
+    /* height: 50%; */
     min-height: 300px;
-    max-height: 400px;
+    max-height: 500px;
     border-radius: 10px;
     box-shadow: 0px 0px 2px 2px rgba(0, 0, 0, 0.1),
                 0px 0px 4px 4px rgba(0, 0, 0, 0.1),
