--- a/views/footer.pug
+++ b/views/footer.pug
@@ -1,7 +1,7 @@
 footer.footer
   .footer-links
 
-    div.adam
+    div.damien
       a(href='https://www.linkedin.com/in/damien-darko/')
         i(class="fab fa-linkedin")
       span Damien Darko
