--- a/public/stylesheets/books.css
+++ b/public/stylesheets/books.css
@@ -92,10 +92,12 @@
 	padding: 15px;
 	margin-top: 5px;
 	position: relative;
+	z-index: -10;
 }
 
 .books-container {
 	display: flex;
+	z-index: -100;
 }
 
 .books {
