--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -6,7 +6,8 @@
   .main-login-container {
     display: flex;
     justify-content: center;
-    height: 100vh;
+    width: 100%;
+    min-height: 450px;
 }
 
 .form-container {
