--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -5,6 +5,7 @@
 
 .mainnav {
 	height: auto;
+	width: 100%;
 	background-color: rgb(240, 240, 240);
 	position: sticky;
 	display: flex;
@@ -22,10 +23,11 @@
 	width: 100%;
 	margin: 0 auto;
 	border-bottom: 1px solid rgba(0, 0, 0, 0.03);
+	z-index: 100;
 }
 
 .navsearch {
-	width: auto;
+	/* width: 200px; */
 	align-self: center;
 }
 
@@ -63,8 +65,7 @@ ul.navlinks {
 .searchinput {
 	padding: 10px;
 	font-size: 0.9em;
-	min-width: 800px;
-	max-width: 800px;
+	width: 100%;
 	height: 35px;
 	border: 0;
 	border-radius: 10px;
